<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/mw.v"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/White"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/comment_userImg"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/image_avatar"/>

        <LinearLayout
            style="@style/mmw.v"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/comment_username"
                style="@style/mw"
                android:text="@string/comment_username"
                android:textColor="@color/User"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/comment_date"
                style="@style/mw"
                android:layout_marginTop="4dp"
                android:text="@string/comment_date"
                android:textColor="@color/Assist"
                android:textSize="12dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/comment_expand"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/button_transparent"
            android:src="@drawable/image_comment_expand"/>

    </LinearLayout>

    <TextView
        android:id="@+id/comment_text"
        style="@style/mw"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/comment_text"
        android:textColor="@color/Content"
        android:textSize="16dp"/>

</LinearLayout>