<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    style="@style/mm.v"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp">

    <LinearLayout
        style="@style/mm.v">

        <TextView
            style="@style/ww"
            android:padding="8dp"
            android:text="@string/user_basics"
            android:textColor="@color/Assist"
            android:textSize="16dp"/>

        <LinearLayout
            style="@style/mw.v"
            android:background="@color/White"
            android:divider="@drawable/divider_horizontal_dot"
            android:showDividers="middle">

            <LinearLayout
                style="@style/mw.h"
                android:gravity="center_vertical"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_user_avatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/image_avatar"/>

                <TextView
                    android:id="@+id/profile_user_name"
                    style="@style/mw"
                    android:layout_marginLeft="16dp"
                    android:maxLines="3"
                    android:textColor="@color/Content"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                style="@style/mw.h"
                android:background="@color/White"
                android:gravity="center_vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/user_id"
                    android:textColor="@color/Assist"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/profile_user_id"
                    style="@style/mw"
                    android:layout_marginLeft="16dp"
                    android:maxLines="3"
                    android:textColor="@color/Content"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                style="@style/mw.h"
                android:background="@color/White"
                android:gravity="center_vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/user_signature"
                    android:textColor="@color/Assist"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/profile_user_signature"
                    style="@style/mw"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/Content"
                    android:textSize="16dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/ww"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/user_extras"
            android:textColor="@color/Assist"
            android:textSize="16dp"/>

        <LinearLayout
            style="@style/mw.v"
            android:background="@color/White"
            android:divider="@drawable/divider_horizontal_dot"
            android:showDividers="middle">

            <LinearLayout
                style="@style/mw.h"
                android:background="@color/White"
                android:gravity="center_vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/user_gender"
                    android:textColor="@color/Assist"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/profile_user_gender"
                    style="@style/mw"
                    android:layout_marginLeft="16dp"
                    android:maxLines="3"
                    android:textColor="@color/Content"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                style="@style/mw.h"
                android:background="@color/White"
                android:gravity="center_vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/user_location"
                    android:textColor="@color/Assist"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/profile_user_location"
                    style="@style/mw"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/Content"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                style="@style/mw.h"
                android:background="@color/White"
                android:gravity="center_vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/user_qq"
                    android:textColor="@color/Assist"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/profile_user_qq"
                    style="@style/mw"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/Content"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                style="@style/mw.h"
                android:background="@color/White"
                android:gravity="center_vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/user_phone"
                    android:textColor="@color/Assist"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/profile_user_phone"
                    style="@style/mw"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/Content"
                    android:textSize="16dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/ww"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/user_basics"
            android:textColor="@color/Assist"
            android:textSize="16dp"/>

        <LinearLayout
            style="@style/mw.v"
            android:background="@color/White"
            android:divider="@drawable/divider_horizontal_dot"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/profile_user_contributes"
                style="@style/mw.h"
                android:background="@drawable/button_transparent"
                android:gravity="center_vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/profile_user_contributes_text"
                    style="@style/mww"
                    android:maxLines="3"
                    android:text="@string/user_contributes"
                    android:textColor="@color/Content"
                    android:textSize="16dp"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/image_front"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_user_chats"
                style="@style/mw.h"
                android:background="@color/White"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/profile_user_chats_text"
                    style="@style/mww"
                    android:maxLines="3"
                    android:text="@string/user_chats"
                    android:textColor="@color/Content"
                    android:textSize="16dp"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/image_front"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/profile_user_logout"
            style="@style/mw"
            android:layout_margin="16dp"
            android:background="@color/Crimson"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/app_logout"
            android:textColor="@color/White"
            android:textSize="16dp"/>

    </LinearLayout>

</ScrollView>